--- a/SqlShip/SqlShip.csproj
+++ b/SqlShip/SqlShip.csproj
@@ -5,4 +5,12 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="4.8.1" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.8.14" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+      <PackageReference Include="NPoco" Version="3.9.4" />
+      <PackageReference Include="Topshelf" Version="4.2.0" />
+    </ItemGroup>
+
 </Project>
